--- a/editior/assets/resources/config/config_card.json
+++ b/editior/assets/resources/config/config_card.json
@@ -1,4 +1,26 @@
 {
-    "ccc": "card1",
-    "ddd": "card2"
+    "1": {
+        "name" : "反弹1"
+    },
+    "2": {
+        "name" : "反弹2"
+    },
+    "3": {
+        "name" : "反弹3"
+    },
+    "4": {
+        "name" : "反弹4"
+    },
+    "5": {
+        "name" : "反弹5"
+    },
+    "6": {
+        "name" : "反弹6"
+    },
+    "7": {
+        "name" : "反弹7"
+    },
+    "8": {
+        "name" : "反弹8"
+    }
 }
