--- a/ui_editor/assets/main/package.xml
+++ b/ui_editor/assets/main/package.xml
@@ -5,6 +5,8 @@
     <image id="tea51" name="7_buff_010.png" path="/"/>
     <image id="tea52" name="0_btn1_small.png" path="/"/>
     <component id="tea53" name="start_btn.xml" path="/"/>
+    <component id="d4a64" name="hand_card.xml" path="/" exported="true"/>
+    <component id="d4a65" name="player.xml" path="/"/>
   </resources>
   <publish name=""/>
 </packageDescription>
